# activities_register

./: Activity.cpp  Activity.h  CMakeLists.txt  Date.cpp  Date.h  Register.cpp  Time.cpp
cppFiles/: Activity.cpp  Date.cpp  Register.cpp  Time.cpp
customWidgets/cppFiles/: ActivityInput.cpp  HourMinutePickerCtrl.cpp
customWidgets/headerFiles/: ActivityInput.h  HourMinutePickerCtrl.h
headerFiles/: Activity.h  Date.h  Register.h  Time.h
mainApp/: App.cpp  App.h  CMakeLists.txt  MainFrame.cpp  MainFrame.h
test/: CMakeLists.txt  activityTests.cpp  dateTest.cpp  registerFixture.cpp  runAllTests.cpp  timeTests.cpp
test/lib/: runAllTest.cpp
test/lib/googletest/include/gtest/: gtest.h
